build/usd-sys/usd-c/include.in/pxr/usd/sdf/sdf_attribute_spec.h

typedef struct pxrInternal_v0_21__pxrReserved____SdfSchemaBase_t_s pxrInternal_v0_21__pxrReserved____SdfSchemaBase_t;
typedef pxrInternal_v0_21__pxrReserved____SdfSchemaBase_t pxr_SdfSchemaBase_t;
typedef struct pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__SdfLayer__t_s pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__SdfLayer__t;
typedef pxrInternal_v0_21__pxrReserved____TfWeakPtr_pxr__SdfLayer__t pxr_SdfLayerHandle_t;
typedef struct pxrInternal_v0_21__pxrReserved____TfType_t_s pxrInternal_v0_21__pxrReserved____TfType_t;
typedef pxrInternal_v0_21__pxrReserved____TfType_t pxr_TfType_t;
typedef struct pxrInternal_v0_21__pxrReserved____TfToken_t_s pxrInternal_v0_21__pxrReserved____TfToken_t;
typedef pxrInternal_v0_21__pxrReserved____TfToken_t pxr_TfToken_t;
typedef struct pxrInternal_v0_21__pxrReserved____VtValue_t_s pxrInternal_v0_21__pxrReserved____VtValue_t;
typedef pxrInternal_v0_21__pxrReserved____VtValue_t pxr_VtValue_t;
typedef struct std__string_t_s std__string_t;
typedef std__string_t std_string_t;
typedef struct pxrInternal_v0_21__pxrReserved____VtArray_pxr__TfToken__t_s pxrInternal_v0_21__pxrReserved____VtArray_pxr__TfToken__t;
typedef pxrInternal_v0_21__pxrReserved____VtArray_pxr__TfToken__t pxr_VtArrayTfToken_t;
typedef struct pxrInternal_v0_21__pxrReserved____SdfPath_t_s pxrInternal_v0_21__pxrReserved____SdfPath_t;
typedef pxrInternal_v0_21__pxrReserved____SdfPath_t pxr_SdfPath_t;
typedef struct pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_t_s {
    char _unused;
} USD_CPPMM_ALIGN(8) pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_t;
typedef pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_t pxr_SdfAttributeSpec_t;
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetSchema(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_SdfSchemaBase_t const * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_IsDormant(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetLayer(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_SdfLayerHandle_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetPath(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_SdfPath_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_PermissionToEdit(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetMetaDataDisplayGroup(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfToken_t * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetInfo(
    pxr_SdfAttributeSpec_t * this_
    , pxr_TfToken_t const * key
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetInfoDictionaryValue(
    pxr_SdfAttributeSpec_t * this_
    , pxr_TfToken_t const * dictionaryKey
    , pxr_TfToken_t const * entryKey
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasInfo(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearInfo(
    pxr_SdfAttributeSpec_t * this_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetTypeForInfo(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfType_t * * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetFallbackForInfo(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_VtValue_t const * * return_
    , pxr_TfToken_t const * key);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_IsInert(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_
    , _Bool ignoreChildren);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasField(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_
    , pxr_TfToken_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetField(
    pxr_SdfAttributeSpec_t * this_
    , _Bool * return_
    , pxr_TfToken_t const * name
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearField(
    pxr_SdfAttributeSpec_t * this_
    , _Bool * return_
    , pxr_TfToken_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetName(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t const * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetNameToken(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_CanSetName(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_
    , std_string_t const * newName
    , std_string_t * whyNot);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetName(
    pxr_SdfAttributeSpec_t * this_
    , _Bool * return_
    , std_string_t const * newName
    , _Bool validate);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_IsValidName(
    _Bool * return_
    , std_string_t const * name);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetCustomData(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * name
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetAssetInfo(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * name
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetDisplayGroup(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetDisplayGroup(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetDisplayName(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetDisplayName(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetDocumentation(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetDocumentation(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetHidden(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetHidden(
    pxr_SdfAttributeSpec_t * this_
    , _Bool value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetPrefix(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetPrefix(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetSuffix(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetSuffix(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetSymmetricPeer(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetSymmetricPeer(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * peerName);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetSymmetryArgument(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * name
    , pxr_VtValue_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetSymmetryFunction(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetSymmetryFunction(
    pxr_SdfAttributeSpec_t * this_
    , pxr_TfToken_t const * functionName);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetValueType(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfType_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetDefaultValue(
    pxr_SdfAttributeSpec_t * this_
    , _Bool * return_
    , pxr_VtValue_t const * defaultValue);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasDefaultValue(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearDefaultValue(
    pxr_SdfAttributeSpec_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetComment(
    pxr_SdfAttributeSpec_t const * this_
    , std_string_t * * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetComment(
    pxr_SdfAttributeSpec_t * this_
    , std_string_t const * value);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_IsCustom(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetCustom(
    pxr_SdfAttributeSpec_t * this_
    , _Bool custom);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasOnlyRequiredFields(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ctor(
    pxr_SdfAttributeSpec_t * * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_copy(
    pxr_SdfAttributeSpec_t * * this_
    , pxr_SdfAttributeSpec_t const * spec);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasConnectionPaths(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearConnectionPaths(
    pxr_SdfAttributeSpec_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetAllowedTokens(
    pxr_SdfAttributeSpec_t * this_
    , pxr_VtArrayTfToken_t const * allowedTokens);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasAllowedTokens(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearAllowedTokens(
    pxr_SdfAttributeSpec_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasDisplayUnit(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearDisplayUnit(
    pxr_SdfAttributeSpec_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetColorSpace(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfToken_t * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_SetColorSpace(
    pxr_SdfAttributeSpec_t * this_
    , pxr_TfToken_t const * colorSpace);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_HasColorSpace(
    pxr_SdfAttributeSpec_t const * this_
    , _Bool * return_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_ClearColorSpace(
    pxr_SdfAttributeSpec_t * this_);
USD_CPPMM_API unsigned int pxrInternal_v0_21__pxrReserved____SdfAttributeSpec_GetRoleName(
    pxr_SdfAttributeSpec_t const * this_
    , pxr_TfToken_t * return_);